Fixed issue with vertical scrollbar when div vertical-align was overwritten by general css.

--- a/css/table.css
+++ b/css/table.css
@@ -31,3 +31,7 @@ table.ngc {
     height:1px;
     position: absolute;
 }
+
+.ngc.scroll-wrapper-cell {
+    vertical-align: middle;
+}
